fixed viz title and downloads component on mobile

--- a/src/page-sections/federal-covid-spending/budget/budget.module.scss
+++ b/src/page-sections/federal-covid-spending/budget/budget.module.scss
@@ -92,16 +92,10 @@
   .vizTitle {
     font-size: 1.25rem;
     text-align: center;
+    font-weight: 400;
   }
 
   .chart-container {
     margin-bottom: 50px;
-  }
-}
-
-@media (max-width: $phone - 1) {
-  .vizTitle {
-    font-size: 1.25rem;
-    font-weight: 300;
   }
 }
